--- a/src/TransAtlanticSlaveTrade/src/hibernate.dev.properties
+++ b/src/TransAtlanticSlaveTrade/src/hibernate.dev.properties
@@ -1,7 +1,7 @@
 hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.connection.url = jdbc:postgresql://localhost/tast
-hibernate.connection.username = tast
-hibernate.connection.password = pass_1234
+hibernate.connection.username =
+hibernate.connection.password =
 hibernate.dialect = edu.emory.library.tast.db.TastPostgreSQLDialect
 
 hibernate.cache.provider_class = org.hibernate.cache.NoCacheProvider
