Added correct config for production
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1863 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/tast.prod.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.prod.properties
@@ -1,5 +1,5 @@
 # general
-site.url = http://<host>:<port>/tast
+site.url = http://slavevoyages.org/tast
 
 # default revision (selected by default in database search)
 database.defaultrevision=1
@@ -10,15 +10,15 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 # maps
-map.url = http://<host>:<port>/map-assets
+map.url = http://slavevoyages.org/map-assets
 map.default.x1 = -100
 map.default.y1 = -60
 map.default.x2 =  20
 map.default.y2 =  60
 
 # images
-images.url = http://<host>:<port>/images-database
-images.dir = <path>/webapps/images-database
+images.url = http://slavevoyages.org/images-database
+images.dir = /opt/tomcat/images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
