--- a/src/TransAtlanticSlaveTrade/src/hibernate.dev.properties
+++ b/src/TransAtlanticSlaveTrade/src/hibernate.dev.properties
@@ -11,3 +11,10 @@ hibernate.show_sql = false
 hibernate.format_sql = false
 
 hibernate.generate_statistics = false 
+
+hibernate.c3p0.min_size=5
+hibernate.c3p0.max_size=100
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=50
+hibernate.c3p0.acquire_increment=3
+hibernate.c3p0.idle_test_period=0
