--- a/src/TransAtlanticSlaveTrade/src/hibernate.qa.properties
+++ b/src/TransAtlanticSlaveTrade/src/hibernate.qa.properties
@@ -8,3 +8,9 @@ hibernate.cache.use_query_cache = false
 hibernate.show_sql = false
 hibernate.format_sql = false
 hibernate.generate_statistics = false
+hibernate.c3p0.min_size=5
+hibernate.c3p0.max_size=100
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=50
+hibernate.c3p0.acquire_increment=3
+hibernate.c3p0.idle_test_period=0
