added c3p0 connection properties
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1895 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/hibernate.prod.properties
+++ b/src/TransAtlanticSlaveTrade/src/hibernate.prod.properties
@@ -3,8 +3,8 @@ hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.connection.url = jdbc:postgresql://174.34.146.154/tast
 hibernate.dialect = edu.emory.library.tast.db.TastPostgreSQLDialect
 
-hibernate.connection.username = tast
-hibernate.connection.password = topmeoff
+hibernate.connection.username =
+hibernate.connection.password =
 
 hibernate.cache.provider_class = org.hibernate.cache.NoCacheProvider
 hibernate.cache.use_query_cache = false
@@ -13,4 +13,9 @@ hibernate.show_sql = false
 hibernate.format_sql = false
 
 hibernate.generate_statistics = false
-
+hibernate.c3p0.min_size=5
+hibernate.c3p0.max_size=100
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=50
+hibernate.c3p0.acquire_increment=3
+hibernate.c3p0.idle_test_period=0
