Checking in my version of the build script since I am the only developer at the moment
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@2007 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/build.xml
+++ b/src/TransAtlanticSlaveTrade/build.xml
@@ -5,7 +5,7 @@
 	<property name="libdir" location="${webdir}/WEB-INF/lib" />
 	<property name="build" location="build" />
 	<!-- servletlib property should be configured -->
-	<property name="servletlib" location="xxx" /> 	
+	<property name="servletlib" location="C:\Program Files\Apache Software Foundation\Tomcat 6.0\lib"/> 	
 	<property name="src" location="src" />
 		
 	<fail message="Usage ant -f build.xml -Denv=env (env=dev/qa/prod)" unless="env"/>
