Committing merge of branch Contribute_Interface r1963-r2075
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@2080 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/resources.properties
+++ b/src/TransAtlanticSlaveTrade/src/resources.properties
@@ -352,9 +352,11 @@ slaves_search_expected=Results: {0,number,#,###,###}
 slaves_all_port_selected=all ports selected
 
 
-submissions_oryginal_voyage=Current voyage
+submissions_original_voyage=Current voyage
 submissions_changed_voyage=Edited information
 submissions_suggested_voyage=Suggested change #
+submissions_new_voyage=Contributor
+contributor_voyage=Contributor
 
 # voyage map
 voyage_map_prch_place_1=First place of slave purchase
