Reverted last change
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@2205 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/tast.qa.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.qa.properties
@@ -10,15 +10,15 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 # maps
-map.url = http://wilson.library.emory.edu/tastdev/map-assets
+map.url = http://wilson.library.emory.edu:9090/map-assets
 map.default.x1 = -100
 map.default.y1 = -60
 map.default.x2 =  20
 map.default.y2 =  60
 
 # images
-images.url = http://wilson.library.emory.edu/tastdev/images-database
-images.dir = /home/tast/voyages/images-database
+images.url = http://wilson.library.emory.edu:9090/images-database
+images.dir = /home/tast/voyages/webapps/images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
@@ -32,4 +32,4 @@ slaves.havana.id = 31312
 google.analytics = true
 
 # downloads URL
-downloads.url = http://wilson.library.emory.edu/tastdev/downloads
+downloads.url = http://wilson.library.emory.edu:9090/downloads
