--- a/src/TransAtlanticSlaveTrade/src/tast.qa.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.qa.properties
@@ -1,5 +1,5 @@
 # general
-site.url = http://wilson.library.emory.edu/tast
+site.url = http://wilson.library.emory.edu:9090/tast
 
 # default revision (selected by default in database search)
 database.defaultrevision=1
@@ -10,14 +10,14 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 # maps
-map.url = http://wilson.library.emory.edu/map-assets
+map.url = http://wilson.library.emory.edu:9090/map-assets
 map.default.x1 = -100
 map.default.y1 = -60
 map.default.x2 =  20
 map.default.y2 =  60
 
 # images
-images.url = http://wilson.library.emory.edu/images-database
+images.url = http://wilson.library.emory.edu:9090/images-database
 images.dir = /home/tast/voyages/webapps/images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
