Resurrected names Db and linked to African Origins site via slaveid in last column

--- a/src/TransAtlanticSlaveTrade/src/resources.properties
+++ b/src/TransAtlanticSlaveTrade/src/resources.properties
@@ -312,7 +312,7 @@ components_names_attributes_shipname=Ship name
 components_names_attributes_age=Age
 components_names_attributes_height=Height [in]
 components_names_attributes_datearr=Arrival
-components_names_attributes_source=Source
+components_names_attributes_goto=Go to African-Origins Record
 components_names_attributes_country=Origin
 components_names_attributes_sexage=Sex/Age
 components_names_attributes_majselpt=Disembarkation
